--- a/poul/css/poul.css
+++ b/poul/css/poul.css
@@ -30,7 +30,7 @@ section.has-light-background h6 {
     --r-heading-color: #ffc600;
     --r-heading-line-height: 1.2;
     --r-heading-letter-spacing: normal;
-    --r-heading-text-transform: none;	// Try uppercase
+    --r-heading-text-transform: none; // Try uppercase
     --r-heading-text-shadow: none;
     --r-heading-font-weight: 600;
     --r-heading1-text-shadow: none;
@@ -47,21 +47,21 @@ section.has-light-background h6 {
 }
 
 .reveal-viewport {
-    background: #191919;
-    background-color: var(--r-background-color);
+  background: #191919;
+  background-color: var(--r-background-color);
 }
 
 .reveal {
-    font-family: var(--r-main-font);
-    font-size: var(--r-main-font-size);
-    font-weight: normal;
-    color: var(--r-main-color);
+  font-family: var(--r-main-font);
+  font-size: var(--r-main-font-size);
+  font-weight: normal;
+  color: var(--r-main-color);
 }
 
 .reveal ::selection {
-    color: var(--r-selection-color);
-    background: var(--r-selection-background-color);
-    text-shadow: none;
+  color: var(--r-selection-color);
+  background: var(--r-selection-background-color);
+  text-shadow: none;
 }
 
 .reveal ::-moz-selection {
@@ -72,14 +72,13 @@ section.has-light-background h6 {
 
 .reveal .slides section,
 .reveal .slides section > section {
-    line-height: 1.3;
-    font-weight: inherit;
-
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  line-height: 1.3;
+  font-weight: inherit;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 /*********************************************
@@ -91,53 +90,53 @@ section.has-light-background h6 {
 .reveal h4,
 .reveal h5,
 .reveal h6 {
-    margin: var(--r-heading-margin);
-    color: var(--r-heading-color);
-    font-family: var(--r-heading-font);
-    font-weight: var(--r-heading-font-weight);
-    line-height: var(--r-heading-line-height);
-    letter-spacing: var(--r-heading-letter-spacing);
-    text-transform: var(--r-heading-text-transform);
-    text-shadow: var(--r-heading-text-shadow);
-    word-wrap: break-word;
+  margin: var(--r-heading-margin);
+  color: var(--r-heading-color);
+  font-family: var(--r-heading-font);
+  font-weight: var(--r-heading-font-weight);
+  line-height: var(--r-heading-line-height);
+  letter-spacing: var(--r-heading-letter-spacing);
+  text-transform: var(--r-heading-text-transform);
+  text-shadow: var(--r-heading-text-shadow);
+  word-wrap: break-word;
 }
 
 .reveal h1 {
-    font-size: var(--r-heading1-size);
+  font-size: var(--r-heading1-size);
 }
 
 .reveal h2 {
-    font-size: var(--r-heading2-size);
+  font-size: var(--r-heading2-size);
 }
 
 .reveal h3 {
-    font-size: var(--r-heading3-size);
+  font-size: var(--r-heading3-size);
 }
 
 .reveal h4 {
-    font-size: var(--r-heading4-size);
+  font-size: var(--r-heading4-size);
 }
 
 .reveal h1 {
-    text-shadow: var(--r-heading1-text-shadow);
+  text-shadow: var(--r-heading1-text-shadow);
 }
 
 /* Optional top right section title */
 .reveal x-section-title {
-    position: absolute;
-    top: 0;
-    right: 20px;
-    color: var(--r-heading-color);
-    font-weight: bold;
-    text-align: right;
+  position: absolute;
+  top: 0;
+  right: 20px;
+  color: var(--r-heading-color);
+  font-weight: bold;
+  text-align: right;
 }
 
 /*********************************************
  * OTHER
  *********************************************/
 .reveal p {
-    margin: var(--r-block-margin) 0;
-    line-height: 1.3;
+  margin: var(--r-block-margin) 0;
+  line-height: 1.3;
 }
 
 /* Remove trailing margins after titles */
@@ -154,112 +153,112 @@ section.has-light-background h6 {
 .reveal img,
 .reveal video,
 .reveal iframe {
-    max-width: 95%;
-    max-height: 95%;
+  max-width: 95%;
+  max-height: 95%;
 }
 
 .reveal strong,
 .reveal b {
-    font-weight: bold;
-    color: var(--r-heading-color);
+  font-weight: bold;
+  color: var(--r-heading-color);
 }
 
 .reveal em {
-    font-style: italic;
+  font-style: italic;
 }
 
 .reveal ol,
 .reveal dl,
 .reveal ul {
-    display: inline-block;
-    text-align: left;
-    margin: 0 0 0 1em;
+  display: inline-block;
+  text-align: left;
+  margin: 0 0 0 1em;
 }
 
 .reveal ol {
-    list-style-type: decimal;
+  list-style-type: decimal;
 }
 
 .reveal ul {
-    list-style-type: disc;
+  list-style-type: disc;
 }
 
 .reveal ul ul {
-    list-style-type: square;
+  list-style-type: square;
 }
 
 .reveal ul ul ul {
-    list-style-type: circle;
+  list-style-type: circle;
 }
 
 .reveal ul ul,
 .reveal ul ol,
 .reveal ol ol,
 .reveal ol ul {
-    display: block;
-    margin-left: 40px;
+  display: block;
+  margin-left: 40px;
 }
 
 .reveal dt {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .reveal dd {
-    margin-left: 40px;
+  margin-left: 40px;
 }
 
 .reveal q,
 .reveal blockquote {
-    quotes: none;
+  quotes: none;
 }
 
 .reveal blockquote {
-    display: block;
-    position: relative;
-    width: 70%;
-    margin: var(--r-block-margin) auto;
-    padding: 5px;
-    font-style: italic;
-    background: rgba(255, 255, 255, 0.05);
-    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
+  display: block;
+  position: relative;
+  width: 70%;
+  margin: var(--r-block-margin) auto;
+  padding: 5px;
+  font-style: italic;
+  background: rgba(255, 255, 255, 0.05);
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
 }
 
 .reveal blockquote p:first-child,
 .reveal blockquote p:last-child {
-    display: inline-block;
+  display: inline-block;
 }
 
 .reveal q {
-    font-style: italic;
+  font-style: italic;
 }
 
 .reveal pre {
-    display: block;
-    position: relative;
-    width: 90%;
-/*    min-width: 40em; */
-    margin: var(--r-block-margin) auto;
-    text-align: left;
-    font-size: 0.55em;
-    font-family: var(--r-code-font);
-    line-height: 1.2em;
-    word-wrap: break-word;
-/*    box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3); */
-    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.15);
+  display: block;
+  position: relative;
+  width: 90%;
+/*  min-width: 40em; */
+  margin: var(--r-block-margin) auto;
+  text-align: left;
+  font-size: 0.55em;
+  font-family: var(--r-code-font);
+  line-height: 1.2em;
+  word-wrap: break-word;
+/*  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3); */
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.15);
 }
 
 .reveal code {
-    font-family: var(--r-code-font);
-    text-transform: none;
-    tab-size: 2;
+  font-family: var(--r-code-font);
+  text-transform: none;
+  tab-size: 2;
 }
 
 .reveal pre code {
-    display: block;
-    padding: 5px;
-    overflow: auto;
-    max-height: 400px;
-    word-wrap: normal;
+  display: block;
+  padding: 5px;
+  overflow: auto;
+  max-height: 400px;
+  word-wrap: normal;
 }
 
 .reveal .code-wrapper {
@@ -271,99 +270,99 @@ section.has-light-background h6 {
 }
 
 .reveal table {
-    margin: auto;
-    border-collapse: collapse;
-    border-spacing: 0;
+  margin: auto;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 .reveal table th {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .reveal table th,
 .reveal table td {
-    text-align: left;
-    padding: 0.2em 0.5em 0.2em 0.5em;
-    border-bottom: 1px solid;
+  text-align: left;
+  padding: 0.2em 0.5em 0.2em 0.5em;
+  border-bottom: 1px solid;
 }
 
 .reveal table th[align="center"],
 .reveal table td[align="center"] {
-    text-align: center;
+  text-align: center;
 }
 
 .reveal table th[align="right"],
 .reveal table td[align="right"] {
-    text-align: right;
+  text-align: right;
 }
 
 .reveal table tbody tr:last-child th,
 .reveal table tbody tr:last-child td {
-    border-bottom: none;
+  border-bottom: none;
 }
 
 .reveal sup {
-    vertical-align: super;
-    font-size: smaller;
+  vertical-align: super;
+  font-size: smaller;
 }
 
 .reveal sub {
-    vertical-align: sub;
-    font-size: smaller;
+  vertical-align: sub;
+  font-size: smaller;
 }
 
 .reveal small {
-    display: inline-block;
-    font-size: 0.6em;
-    line-height: 1.2em;
-    vertical-align: top;
+  display: inline-block;
+  font-size: 0.6em;
+  line-height: 1.2em;
+  vertical-align: top;
 }
 
 .reveal small * {
-    vertical-align: top;
+  vertical-align: top;
 }
 
 .reveal .warning {
-    display: flex;
-    background-color: #ff464b;
-    border-radius: 10px;
-    width: 100%;
-    padding: 10px 10px 10px 100px;
-    min-height: 75px;
-    background-size: 100px 90%;
-    background-position: 10px;
-    background-repeat: no-repeat;
-    flex-direction: column;
-    align-content: center;
-    justify-content: center;
-    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 486.46 486.46' xml:space='preserve' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill='%23fff' d='M243.32 20.883c-31.4 0-59.398 16.298-74.898 43.398l-156.8 271.5c-15.6 27.3-15.499 59.8.3 86.9 15.6 26.8 43.5 42.9 74.7 42.9h312.8c31.3 0 59.399-16.3 75.199-43.6 15.7-27.1 15.799-59.4.199-86.4l-156.6-271.2c-15.5-27.3-43.5-43.5-74.9-43.5zm0 39.199c17.1 0 32.4 8.9 40.9 23.801l156.7 271.4c8.4 14.6 8.3 32.202-.3 47.102-8.7 15-24.102 23.898-41.302 23.898h-312.8c-17 0-32.3-8.698-40.8-23.398-8.6-14.9-8.7-32.701-.1-47.701l156.8-271.4c8.5-14.9 23.698-23.699 40.898-23.699zm.35 97.102a26.237 26.237 0 0 0-6.649.7c-11.9 3.4-19.3 14.198-19.3 27.298.6 7.9 1.1 15.901 1.7 23.801 1.7 30.1 3.4 59.6 5.1 89.7.6 10.2 8.5 17.6 18.699 17.6s18.201-7.9 18.701-18.2c0-6.2 0-11.899.6-18.199 1.1-19.3 2.3-38.6 3.4-57.9.6-12.5 1.699-25 2.299-37.5 0-4.5-.599-8.5-2.299-12.5-4.144-9.1-12.777-14.57-22.252-14.799zm-.45 176.2c-13.6 0-25 11.4-25 25s11.4 25 25 25c13.1 0 25-11.4 24.4-24.4.6-14.3-10.7-25.6-24.4-25.6z'/%3E%3C/svg%3E%0A");
-    content: " ";
+  display: flex;
+  background-color: #ff464b;
+  border-radius: 10px;
+  width: 100%;
+  padding: 10px 10px 10px 100px;
+  min-height: 75px;
+  background-size: 100px 90%;
+  background-position: 10px;
+  background-repeat: no-repeat;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 486.46 486.46' xml:space='preserve' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill='%23fff' d='M243.32 20.883c-31.4 0-59.398 16.298-74.898 43.398l-156.8 271.5c-15.6 27.3-15.499 59.8.3 86.9 15.6 26.8 43.5 42.9 74.7 42.9h312.8c31.3 0 59.399-16.3 75.199-43.6 15.7-27.1 15.799-59.4.199-86.4l-156.6-271.2c-15.5-27.3-43.5-43.5-74.9-43.5zm0 39.199c17.1 0 32.4 8.9 40.9 23.801l156.7 271.4c8.4 14.6 8.3 32.202-.3 47.102-8.7 15-24.102 23.898-41.302 23.898h-312.8c-17 0-32.3-8.698-40.8-23.398-8.6-14.9-8.7-32.701-.1-47.701l156.8-271.4c8.5-14.9 23.698-23.699 40.898-23.699zm.35 97.102a26.237 26.237 0 0 0-6.649.7c-11.9 3.4-19.3 14.198-19.3 27.298.6 7.9 1.1 15.901 1.7 23.801 1.7 30.1 3.4 59.6 5.1 89.7.6 10.2 8.5 17.6 18.699 17.6s18.201-7.9 18.701-18.2c0-6.2 0-11.899.6-18.199 1.1-19.3 2.3-38.6 3.4-57.9.6-12.5 1.699-25 2.299-37.5 0-4.5-.599-8.5-2.299-12.5-4.144-9.1-12.777-14.57-22.252-14.799zm-.45 176.2c-13.6 0-25 11.4-25 25s11.4 25 25 25c13.1 0 25-11.4 24.4-24.4.6-14.3-10.7-25.6-24.4-25.6z'/%3E%3C/svg%3E%0A");
+  content: " ";
 }
 
 .reveal img {
-    margin: var(--r-block-margin) 0;
+  margin: var(--r-block-margin) 0;
 }
 
 /*********************************************
  * LINKS
  *********************************************/
 .reveal a {
-    color: var(--r-link-color);
-    text-decoration: none;
-/*    -webkit-transition: color 0.15s ease; */
-/*    -moz-transition: color 0.15s ease; */
-    transition: color 0.15s ease;
+  color: var(--r-link-color);
+  text-decoration: none;
+/*  -webkit-transition: color 0.15s ease; */
+/*  -moz-transition: color 0.15s ease; */
+  transition: color 0.15s ease;
 }
 
 .reveal a:hover {
-    color: var(--r-link-color-hover);
-    text-shadow: none;
-    border: none;
+  color: var(--r-link-color-hover);
+  text-shadow: none;
+  border: none;
 }
 
 .reveal .roll span:after {
-    color: #fff;
-    background: var(--r-link-color-dark);
+  color: #fff;
+  background: var(--r-link-color-dark);
 }
 
 /*********************************************
@@ -387,44 +386,44 @@ section.has-light-background h6 {
  * IMAGES
  *********************************************/
 .reveal img {
-    max-width: 67%;
-    margin: 2%;
+  max-width: 67%;
+  margin: 2%;
 }
 
 .reveal img.plain {
-    border: 0;
-    box-shadow: none;
+  border: 0;
+  box-shadow: none;
 }
 
 .reveal a img {
-    -webkit-transition: all 0.15s linear;
-    -moz-transition: all 0.15s linear;
-    transition: all 0.15s linear;
+  -webkit-transition: all 0.15s linear;
+  -moz-transition: all 0.15s linear;
+  transition: all 0.15s linear;
 }
 
 .reveal a:hover img {
-    background: rgba(255, 255, 255, 0.2);
-    border-color: #fc4a2c;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.55);
+  background: rgba(255, 255, 255, 0.2);
+  border-color: #fc4a2c;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.55);
 }
 
 .reveal img.shadow {
-    box-shadow: 5px 5px 8px #000;
+  box-shadow: 5px 5px 8px #000;
 }
 
 /*********************************************
  * NAVIGATION CONTROLS
  *********************************************/
 .reveal .controls {
-    color: var(--r-link-color);
+  color: var(--r-link-color);
 }
 
 /*********************************************
  * PROGRESS BAR
  *********************************************/
 .reveal .progress {
-    background: rgba(0, 0, 0, 0.2);
-    color: var(--r-link-color);
+  background: rgba(0, 0, 0, 0.2);
+  color: var(--r-link-color);
 }
 
 /*********************************************
@@ -440,94 +439,156 @@ section.has-light-background h6 {
  * INTRO & OUTRO
  *********************************************/
 
+.reveal .course-block {
+  width: 80%
+}
+
+.reveal .text-mix {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.3em;
+  width: fit-content;
+}
+
+.reveal .text-mix img {
+  margin: 0;
+}
+
+.reveal .intro h3 {
+  margin: 0;
+  font-weight: normal;
+}
+
+.reveal .course-block {
+  margin-bottom: 0.5em;
+}
+
+
 .reveal .intro h1 {
-    padding: 0;
-    margin: 0;
+  text-shadow: 0.05em 0.05em 0.1em black;
+  padding: 0;
+  margin: 0;
 }
 
-.reveal .intro .logo {
-    max-width: none;
-    height: 23%;
-    padding: 0;
+.reveal i {
+  font-style: italic;
 }
 
-.reveal .intro .authors {
-    list-style: none;
-    font-size: 0.6em;
-    margin-top: 3%;
-    margin-left: 0;
-    padding-left: 0;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    width: 80%;
+.reveal .intro hr,
+.reveal .outro hr {
+  width: 70%;
+  border: 0px;
+  border-top: 0.07em solid gray;
 }
-.reveal .intro .authors li {
-    flex-basis: 50%;
-    flex-grow: 1;
-    text-align: center;
+
+.reveal .logo-block {
+  display: flex;
+  justify-content: center;
+  margin-top: 1em;
 }
+
+.reveal .logo-block > * {
+  margin: 0;
+  align-self: center
+}
+
+.reveal .logo {
+  max-width: 4em;
+  margin-right: 0.5em;
+}
+
+.reveal .logo-text {
+  max-width: 10em;
+}
+
+.reveal .authors-block {
+  list-style: none;
+  font-size: 0.6em;
+  margin-top: 3%;
+  margin-left: 0;
+  padding-left: 0;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 80%;
+}
+.reveal .authors-block li {
+  flex-basis: 33%;
+  flex-grow: 1;
+  text-align: center;
+  margin-top: 1em;
+}
+
+.reveal .authors-block a {
+  font-style: italic;
+  color: var(--r-main-color);
+}
+
+.reveal .poul-info .title-block {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.reveal .poul-info .title-block > * {
+  flex-shrink: 0;
+}
+
+.reveal .poul-info .logo-text {
+  width: 10em;
+}
+
+.reveal .poul-info .vertical-line {
+  height: 4em;
+  border: 0px;
+  border-left: 0.12em solid white;
+  margin-left: 1em;
+  margin-right: 1em;
+}
+
 
 .reveal .outro h1 {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
+  font-size: 2em;
+  width: max-content;
 }
 
-.reveal .outro .logo {
-    height: 25%;
-    padding: 0;
+.reveal .outro .license {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 4em;
+  padding: 0;
+  font-size: 0.44em;
+  margin-top: 1em;
 }
 
-.reveal .outro .cc {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 6%;
-    width: 40%;
-    padding: 0;
-    font-size: 0.22em;
+.reveal .outro .license img {
+  height: 4em;
+  margin: 0 4% 0 0;
 }
 
-.reveal .outro .cc img {
-    height: 100%;
-    margin: 0 4% 0 0;
-}
-
-.reveal .outro .cc div {
-    text-align: center;
-}
-
-.reveal .outro .authors {
-    list-style: none;
-    font-size: 0.6em;
-    margin-top: 3%;
-    margin-left: 0;
-    padding-left: 0;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    width: 80%;
-}
-.reveal .outro .authors li {
-    flex-basis: 50%;
-    flex-grow: 1;
-    text-align: center;
+.reveal .outro .license div {
+  text-align: center;
+  flex-shrink: 0;
 }
 
 /*********************************************
  * CODE
  *********************************************/
 .reveal code {
-    tab-size: 4;
-    -moz-tab-size: 4;
+  tab-size: 4;
+  -moz-tab-size: 4;
 }
 
 .reveal code.input::before, .reveal pre.input > code::before {
-    content: "$";
-    color: #8699A4;
-    padding-right: 5px;
+  content: "$";
+  color: #8699A4;
+  padding-right: 5px;
 }
 
 .reveal code.input.root::before, .reveal pre.input.root > code::before {
-    content: "#";
+  content: "#";
 }
